# cmocka_template

./: CMakeLists.txt  LICENSE  README.md  a.out  app  build_app.txt  build_tests.txt
include/: coin.h  coin_di.h  myrandom.h
src/: CMakeLists.txt  coin.c  coin_di.c  main.c  myrandom.c
test/: CMakeLists.txt  test_coin.c  test_coindi.c
